--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    implementation "androidx.room:room-rxjava2:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -90,7 +91,6 @@ dependencies {
 
     implementation "androidx.paging:paging-runtime:$paging_version"
     implementation("androidx.room:room-paging:2.4.3")
-    // optional - RxJava3 support
     implementation "androidx.paging:paging-rxjava3:$paging_version"
 
 
